--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
     "ngx-cursor": "^13.0.0",
     "rxjs": "~7.5.0",
