--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "~13.2.0",
     "@angular/compiler": "~13.2.0",
     "@angular/core": "~13.2.0",
+    "@angular/fire": "^7.4.1",
     "@angular/forms": "~13.2.0",
     "@angular/material": "^13.3.9",
     "@angular/platform-browser": "~13.2.0",
@@ -22,6 +23,7 @@
     "@angular/router": "~13.2.0",
     "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
+    "firebase": "^9.13.0",
     "ngx-cursor": "^13.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
