--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
     "firebase": "^9.13.0",
+    "jquery": "^3.6.4",
     "ngx-cursor": "^13.0.0",
     "rxjs": "~7.5.0",
+    "slick-carousel": "^1.8.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
