--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~13.2.0",
     "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
+    "file-saver": "^2.0.5",
     "firebase": "^9.13.0",
     "jquery": "^3.6.4",
     "ngx-cursor": "^13.0.0",
@@ -36,6 +37,7 @@
     "@angular/cli": "~13.2.3",
     "@angular/compiler-cli": "~13.2.0",
     "@types/aos": "^3.0.4",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "autoprefixer": "^10.4.14",
